<resources>
    <string name="app_name">faraway</string>

    <!-- generales -->
    <string name="input_placeholder">Ingrese</string>
    <string name="content_description_logo">logo</string>

    <string name="search_button">Buscar</string>
    <string name="clear_button">Limpiar</string>

    <!-- login-->
    <string name="login_username">Usuario</string>
    <string name="login_password">Contraseña</string>
    <string name="login_button">Ingresar</string>
    <string name="login_greeting">¡Hola!</string>
    <string name="login_sub_greeting">Ingresa tu cuenta</string>
    <string name="footer">© 2020 Todos los derechos reservados. Powered by farewey team</string>

    <!-- Registro-->
    <string name="register_greeting">Registro</string>

    <!-- Registro del producto-->
    <string name="nombre_producto">Nombre</string>
    <string name="precio_producto">Precio</string>
    <string name="stock_producto">Stock</string>
    <string name="categoria_producto">Categoria</string>
    <string name="boton_producto">APLICAR CAMBIOS</string>

    <!-- Mapa de tiendas-->
    <string name="nombre_tienda">Calzados MM</string>
    <string name="direccion_tienda">Av. Guardia Civil 475 - Chorrillos</string>
    <string name="boton_tienda">REGRESAR</string>

    <!-- Producto Descripcion-->
    <string name="product_description_title">Descripcion</string>
    <string name="product_description_text">Este es el texto de la descripcion del producto texto de la descripcion del producto texto de la descripcion del producto</string>
    <string name="price_product_title">Precio</string>
    <string name="stock_product_title">Stock</string>
    <string name="price_product">0.00 Soles</string>
    <string name="stock_product">0 Unidades</string>
    <string name="contact_number">Numero de contacto</string>

    <!-- Productos Favoritos-->
    <string name="favorite_products_text">PRODUCTOS FAVORITOS</string>

    <!-- acceptance-search -->
    <string name="main_title">Aceptación</string>
    <string name="sub_title_one">Datos de operación</string>
    <string name="sub_title_two">Datos del aceptante</string>
    <string name="sales_code">N° de proforma</string>
    <string name="operation_date_from">Operación desde</string>
    <string name="operation_date_to">Operación hasta</string>
    <string name="placeholder_date">dd/mm/aaaa</string>
    <string name="document_type">Tipo de documento</string>
    <string name="document_number">N° de identidad</string>
    <string name="spinner_prompt">Seleccione</string>

    <!-- acceptance-operations - recycler_view -->
    <string name="bills">Letras</string>
    <string name="results">Resultados</string>
    <string name="content_description_eye_view"></string>

    <!-- acceptance-details -->
    <string name="details_sales_code">Proforma N°</string>
    <string name="data_drawer_title">Datos del Girador</string>
    <string name="comercial_name_label">RAZÓN SOCIAL</string>
    <string name="document_number_label">N° RUC</string>
    <string name="address_label">DOMICILIO</string>

    <string name="data_drawee_title">Datos del aceptante</string>
    <string name="data_guarantee_title">Datos del aval</string>
    <string name="drawee_title">Aceptante</string>
    <string name="document_type_label">TIPO DOC. IDENTIDAD</string>
    <string name="name_label">NOMBRES</string>
    <string name="last_name_label">APELLIDOS</string>
    <string name="place_label">LOCALIDAD</string>
    <string name="email_label">CORREO ELECTRÓNICO</string>
    <string name="phone_number_label">TELÉFONO</string>

    <string name="special_clauses_title">Clausulas especiales</string>
    <string name="more_data_title">Otros datos</string>
    <string name="project_name_label">PROYECTO</string>
    <string name="draw_date_label">FECHA DE GIRO</string>
    <string name="draw_place_label">LUGAR DE GIRO</string>
    <string name="reference_label">REF. GIRADOR</string>
    <string name="bill_total_quantity_label">Cantidad de letras</string>
    <string name="bill_total_amount_label">Importe total</string>
    <string name="bill_total_amount_label_2">N° de letras</string>
    <string name="due_date_label">F. vencimiento</string>
    <string name="currency_amount_bill_label">Moneda e importe</string>

    <string name="btn_signature_text">Firma electrónica</string>

    <!-- acceptance-signatories-->
    <string name="document_label">D.O.I</string>
    <string name="status_label">Estado</string>
    <string name="acceptance_list_label">Lista de aceptantes</string>
    <string name="guarantees_list_label">Firma del aval</string>
    <string name="content_description_fingerprint">fingerprint</string>
    <string name="acceptance_register_btn">Registrar aceptación</string>

    <!-- capture-morpho-->
    <string name="device_not_detected">Ningún dispositivo detectado.</string>
    <string name="open_ssl_path">No se puede leer el certificado de host.\nPor favor, compruebe que se haya copiado los keys en el directorio .\\sdcard\\keys.</string>
    <string name="connection_fail">Por favor, compruebe que el dispositivo está conectado correctamente.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_product">ProductActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <!-- Detalle Producto -->

    <string name="btn_grabar">Grabar</string>
    <string name="btn_retornar">Volver</string>
    <string name="txt_Description">Descripción</string>
    <string name="txt_Precio">Precio</string>
    <string name="txt_Stock">Stock</string>
    <string name="nombre">Nombre</string>
    <string name="idProducto">Código</string>
    <string name="detailProducto">Detalle Producto</string>
    <string name="title_activity_main_drawer">MainDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Pedido -->
    <string name="txt_Pedido">Registrar Pedido</string>
    <string name="txt_Total">Cantidad</string>
    <string name="txt_Producto">Producto</string>


    <!-- Menu -->
    <string name="action_Pedido">Pedidos</string>
    <string name="action_Login">Login</string>

</resources>
