<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_description_product"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/faraway"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/faraway"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/faraway"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvProdDescTitle"
            android:layout_alignParentLeft="true"
            android:text="@string/product_description_title"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvProdDescText"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/tvProdDescTitle"
            android:text="@string/product_description_text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvPriceProdText"
            android:layout_below="@id/tvProdDescText"
            android:layout_alignParentLeft="true"
            android:text="@string/price_product_title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvPriceProdText"
            android:layout_alignParentLeft="true"
            android:text="@string/price_product"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvStockProdText"
            android:layout_alignParentRight="true"
            android:layout_below="@id/tvProdDescText"
            android:text="@string/stock_product_title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvStockProdQuantity"
            android:layout_below="@id/tvStockProdText"
            android:layout_alignParentRight="true"
            android:text="@string/stock_product" />

        <android.widget.Button
            android:id="@+id/btnContacto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvStockProdQuantity"
            android:layout_alignParentRight="true"
            android:text="@string/contact_number"/>

    </RelativeLayout>

</LinearLayout>