<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="start"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/lightBgColor"
    tools:context=".activity.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/white_card_layout"
            android:paddingTop="40dp"
            android:paddingBottom="40dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_centerInParent="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_greeting"
                android:textSize="32sp"
                android:textColor="@color/blueMain"
                android:layout_marginBottom="34dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_sub_greeting"
                android:textSize="18sp"
                android:textColor="#a2b5d3"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_username"
                android:textSize="12sp"
                android:textColor="@color/darkText"
                android:layout_marginBottom="8dp"/>

            <EditText
                android:id="@+id/editTxtUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_placeholder"
                android:autofillHints="@string/login_username"
                android:inputType="textPersonName"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:background="@drawable/rounded_text_input"
                android:textColor="#a2b5d3"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_password"
                android:textSize="12sp"
                android:textColor="@color/darkText"
                android:layout_marginBottom="8dp"/>

            <EditText
                android:id="@+id/editTxtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_placeholder"
                android:autofillHints="@string/login_password"
                android:inputType="textPassword"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:background="@drawable/rounded_text_input"
                android:textColor="#a2b5d3"/>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/blue_rounded_btn"
                android:text="@string/login_button"
                android:textColor="@color/white"
                android:layout_marginBottom="8dp"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/footer"
            android:textSize="8sp"
            android:textColor="#a2b5d3"
            android:textAlignment="center"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>

</LinearLayout>