<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.PedidoActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/white_card_layout"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingTop="0dp"
            android:paddingRight="20dp"
            android:paddingBottom="40dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="34dp"
                android:gravity="center"
                android:text="@string/txt_Pedido"
                android:textColor="@color/blueMain"
                android:textSize="32sp" />


            <TableLayout
                android:layout_width="match_parent"

                android:layout_height="match_parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_Total" />

                    <EditText
                        android:id="@+id/total"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPersonName" />
                </TableRow>

                <Spinner
                    android:id="@+id/products_spinner"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/btn_grabar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/blue_rounded_btn"
                    android:text="@string/btn_grabar"
                    android:onClick="registrar"
                    android:textColor="@color/white" />


                <Button
                    android:id="@+id/button2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/blue_rounded_btn"
                    android:onClick="salir"
                    android:text="Salir"
                    android:textColor="@color/white" />


            </TableLayout>


        </LinearLayout>

    </RelativeLayout>

</LinearLayout>
